fix wishlist add misalignment

--- a/site/styles/_wishlist.scss
+++ b/site/styles/_wishlist.scss
@@ -30,6 +30,7 @@
 
     .s72-icon {
       font-size: 28px !important;
+      padding: 2px 0;
       opacity: 0.8;
     }
   }
